fix: Connect to 'alpha' Firestore database and add project images
- Update firebase-config.js to use 'alpha' database instance
- Update test-firebase.html to use 'alpha' database instance
- Improve offline persistence error logging
- Add project images for social media and documentation

Co-authored-by: Ona <no-reply@ona.com>

--- a/test-firebase.html
+++ b/test-firebase.html
@@ -131,7 +131,7 @@
         try {
             app = initializeApp(firebaseConfig);
             auth = getAuth(app);
-            db = getFirestore(app);
+            db = getFirestore(app, 'alpha'); // Connect to 'alpha' database
             
             document.getElementById('initStatus').className = 'status success';
             document.getElementById('initStatus').textContent = '✅ Firebase initialized successfully';
