feat: add visual enhancements - animations, sound effects, session history
Visual Enhancements:
- Smooth input section morph animation with fade transitions
- Pulsing border animation on game completion
- DOS-style sound effects system with Web Audio API
- Optional sound toggle in header (persistent settings)
- Session history page with filtering and pagination

Sound Effects:
- Submit prompt beep
- Word match chirp
- Victory fanfare (ascending tones)
- Defeat trombone effect
- Error sounds
- Click feedback
- Toggle button with 🔊/🔇 icons

Session History:
- Dedicated history.html page
- Firebase integration for user sessions
- Filters: All, Wins, Losses, Today, Week, Month
- Color-coded session cards (green=win, red=loss)
- Stats display: attempts, tokens, matches, efficiency
- Pagination support (10 per page)
- Click to view session details (replay page coming)

Animation Details:
- 300ms fade transitions
- Scale transform (0.95 to 1.0)
- Infinite pulse-border animation
- Hardware-accelerated CSS

Files Added:
- sound-effects.js - SoundManager class with Web Audio API
- history.html - Session history page with Firebase
- VISUAL_ENHANCEMENTS_STATUS.md - Feature documentation

Files Modified:
- dos-theme.css - Animation keyframes and transitions
- game.js - Sound triggers, morph animation timing
- index.html - Sound toggle button

Next: Session replay, image card generator, custom avatars

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -225,6 +225,9 @@
                     <p class="subtitle">Guide Arty the Haiku Bot to speak your target words</p>
                 </div>
                 <div class="auth-section">
+                    <button id="soundToggleBtn" class="btn-auth" title="Toggle sound effects">
+                        <span id="soundIcon">🔊</span>
+                    </button>
                     <a href="about.html" class="btn-auth">About</a>
                     <button id="leaderboardBtn" class="btn-auth">Leaderboard</button>
                     <button id="profileBtn" class="btn-auth">Profile</button>
