feat: mobile-first layout redesign for optimal space utilization
Major Layout Changes:
- Restructured for mobile-first design (320px+)
- Fixed top section: Combined target/blacklist words
- Scrollable middle: Conversation trail (flex-grow)
- Fixed bottom: Input section (always accessible)
- Compact header with minimal controls

Space Optimization:
- Header: 80px → 32px (60% reduction)
- Game info: 200px → 60px (70% reduction)
- Trail: Dynamic fill (200-400px more content)
- Input: 120px → 80px (33% reduction)
- Total: ~230px more usable space

Layout Structure:
┌─────────────────────┐
│ Header (Compact)    │ ← 32px, fixed
├─────────────────────┤
│ TARGET │ BLACKLIST  │ ← 60px, sticky top
│ ATT │ TOK │ MAT     │
├─────────────────────┤
│                     │
│ Conversation Trail  │ ← Flex-grow, scrollable
│ (Main Canvas)       │
│                     │
├─────────────────────┤
│ Input Section       │ ← 80px, sticky bottom
└─────────────────────┘

Key Features:
- Sticky positioning (top/bottom sections)
- Flexbox layout (fills viewport)
- Single scroll area (trail only)
- Touch-friendly controls (44x44px min)
- No horizontal scroll
- Compact typography (9-12px)

CSS Architecture:
- body/container: flex column, 100vh
- game-words-section: sticky top, z-index 100
- response-trail: flex 1, overflow-y auto
- input-section: sticky bottom, z-index 100

Mobile Optimizations:
- Hidden: ASCII borders, subtitle, live stats
- Compact: Header, buttons, spacing
- Combined: Target/blacklist in one section
- Efficient: Hardware-accelerated positioning

Files Modified:
- index.html - Restructured game info section
- dos-theme.css - Mobile-first flexbox layout
- MOBILE_LAYOUT_REDESIGN.md - Complete documentation

Next: Responsive breakpoints for tablet/desktop

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -254,33 +254,25 @@
             </div>
         </header>
 
-        <div class="game-info">
-            <div class="info-card target-card">
-                <h2>Target Words</h2>
-                <div id="targetWords" class="word-list"></div>
-            </div>
-
-            <div class="info-card blacklist-card">
-                <h2>Blacklist Words</h2>
-                <div id="blacklistWords" class="word-list"></div>
-            </div>
-
-            <div class="info-card score-card">
-                <h2>Today's Score</h2>
-                <div class="score-display">
-                    <div class="score-item">
-                        <span class="score-label">Attempts:</span>
-                        <span id="attempts" class="score-value">0</span>
-                    </div>
-                    <div class="score-item">
-                        <span class="score-label">Total Tokens:</span>
-                        <span id="totalTokens" class="score-value">0</span>
-                    </div>
-                    <div class="score-item">
-                        <span class="score-label">Matches:</span>
-                        <span id="matches" class="score-value">0/3</span>
-                    </div>
+        <!-- Top Section: Target & Blacklist Combined -->
+        <div class="game-words-section">
+            <div class="words-container">
+                <div class="words-group target-group">
+                    <h3>TARGET</h3>
+                    <div id="targetWords" class="word-list"></div>
                 </div>
+                <div class="words-divider">│</div>
+                <div class="words-group blacklist-group">
+                    <h3>BLACKLIST</h3>
+                    <div id="blacklistWords" class="word-list"></div>
+                </div>
+            </div>
+            <div class="score-compact">
+                <span>ATT: <strong id="attempts">0</strong>/10</span>
+                <span>│</span>
+                <span>TOK: <strong id="totalTokens">0</strong></span>
+                <span>│</span>
+                <span>MAT: <strong id="matches">0/3</strong></span>
             </div>
         </div>
 
