--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - Art of Intent</title>
     <meta name="description" content="Learn about Art of Intent, the rules, gameplay, and creator information.">
-    <link rel="stylesheet" href="dos-theme.css">
+    <link rel="stylesheet" href="src/css/dos-theme.css">
     <style>
         .about-container {
             max-width: 900px;
