--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Session History - Art of Intent</title>
-    <link rel="stylesheet" href="dos-theme.css">
+    <link rel="stylesheet" href="src/css/dos-theme.css">
     <style>
         .history-container {
             max-width: 1200px;
@@ -162,7 +162,7 @@
     </div>
     
     <script type="module">
-        import { auth, db } from './firebase-config.js';
+        import { auth, db } from './src/js/firebase-config.js';
         import { collection, query, where, orderBy, limit, getDocs, startAfter } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
         
         let currentFilter = 'all';
