feat: activate Firebase Analytics with comprehensive tracking
- Add analytics.js module for Firebase Analytics (GA4) integration
  - GameAnalytics: game_start, game_complete, prompt_submit, blacklist_violation, api_error
  - UserAnalytics: share_click, leaderboard_view, profile_view, auth events
  - ErrorAnalytics: js_error, network_error tracking
  - Web Vitals: LCP, FID, CLS, TTFB, INP monitoring
  - UTM campaign parameter tracking

- Integrate analytics into game.js
  - Track game lifecycle events (start, complete, win/loss)
  - Track user interactions (prompts, violations, errors)
  - Add duration calculation for game sessions
  - Track API errors and failures

- Integrate analytics into ui-components.js
  - Track leaderboard views and filter changes
  - Track share button clicks (image/text)

- Add comprehensive documentation
  - ANALYTICS_STRATEGY.md: Full analytics strategy and options
  - ANALYTICS_INTEGRATION.md: Step-by-step integration guide
  - ANALYTICS_SUMMARY.md: Quick reference for launch
  - ANALYTICS_TEST_CHECKLIST.md: Testing procedures

- Enable real-time analytics dashboard in Firebase Console
- Support DebugView for real-time testing
- Track all key metrics: engagement, performance, errors, user behavior

Benefits:
- Free forever (Firebase Analytics)
- Real-time user behavior insights
- Performance monitoring (Web Vitals)
- Error tracking and debugging
- Campaign attribution (UTM tracking)
- No additional services required

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -396,5 +396,11 @@
             initializeUIComponents();
         });
     </script>
+    
+    <!-- Analytics -->
+    <script type="module">
+        import { initAnalytics } from './src/js/analytics.js';
+        initAnalytics();
+    </script>
 </body>
 </html>
