fix: resolve syntax errors in ui-components.js and game.js module loading
- Fix duplicate .join('') in ui-components.js profile sessions template
  - Removed extra closing that caused syntax error on line 371

- Fix game.js import statement error
  - Changed script tag to type="module" in index.html
  - Allows ES6 import statements for analytics.js

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
     <!-- Firebase Integration -->
     <script src="src/js/firebase-integration.js"></script>
     
-    <script src="src/js/game.js"></script>
+    <script type="module" src="src/js/game.js"></script>
     
     <!-- Initialize UI Components -->
     <script type="module">
