feat: add Discord and GitHub links to About page
Added prominent community section to About page:
- Discord invite link for community discussions
- GitHub repository link for contributions
- Alpha release status badge
- Styled callout box at top of page for visibility

Updated contact section with:
- Separate Discord and GitHub links
- Clear descriptions of each platform's purpose
- Proper link styling with DOS theme colors

Co-authored-by: Ona <no-reply@ona.com>

--- a/about.html
+++ b/about.html
@@ -136,6 +136,18 @@
                 This game combines creative writing, strategic thinking, and AI interaction in a unique 
                 DOS-themed interface reminiscent of early 1990s computing.
             </p>
+            <p style="margin-top: var(--spacing-md); padding: var(--spacing-md); border: 1px solid var(--dos-cyan); background: var(--bg-primary);">
+                <strong style="color: var(--dos-yellow);">🟡 Alpha Release:</strong> 
+                <span style="color: var(--dos-cyan);">v1.0.0-alpha</span> - Your feedback shapes the game!
+                <br><br>
+                <strong style="color: var(--dos-green);">Join the Community:</strong>
+                <br>
+                💬 <a href="https://discord.gg/9XV4HYKZqG" target="_blank" rel="noopener" style="color: var(--dos-cyan); text-decoration: underline;">Discord</a> - 
+                Discuss strategies, share feedback, get updates
+                <br>
+                🐙 <a href="https://github.com/karx/art-of-intent" target="_blank" rel="noopener" style="color: var(--dos-cyan); text-decoration: underline;">GitHub</a> - 
+                Report bugs, suggest features, contribute
+            </p>
         </div>
 
         <div class="about-section">
@@ -237,8 +249,18 @@
                 and game design, wrapped in a nostalgic DOS-era interface.
             </p>
             <p>
-                <strong>Contact:</strong> For feedback, bug reports, or collaboration inquiries, 
-                reach out via GitHub at <code>github.com/karx</code>
+                <strong>Community:</strong> Join our Discord community for discussions, feedback, and updates:
+                <br>
+                <a href="https://discord.gg/9XV4HYKZqG" target="_blank" rel="noopener" style="color: var(--dos-cyan); text-decoration: underline;">
+                    discord.gg/9XV4HYKZqG
+                </a>
+            </p>
+            <p>
+                <strong>GitHub:</strong> Report bugs, suggest features, or contribute:
+                <br>
+                <a href="https://github.com/karx/art-of-intent" target="_blank" rel="noopener" style="color: var(--dos-cyan); text-decoration: underline;">
+                    github.com/karx/art-of-intent
+                </a>
             </p>
         </div>
 
