--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
     <link rel="canonical" href="https://art-of-intent.netlify.app/">
     
     <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="manifest" href="/site.webmanifest">
     
     <!-- Schema.org JSON-LD for Game Actions and Interactions -->
