fix: remove ES6 module syntax from share card generator
Issue:
- ES6 import/export syntax caused error in non-module context
- 'import declarations may only appear at top level of a module'

Solution:
- Removed export from generateShareCardV3()
- Removed import from share-card-generator.js
- Added share-card-v3.js script tag before main generator
- Functions now available in global scope

Changes:
- share-card-v3.js: function declaration instead of export
- share-card-generator.js: removed import statement
- index.html: added script tag for share-card-v3.js

Co-authored-by: Ona <no-reply@ona.com>

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
     <script src="src/js/sound-effects.js"></script>
     
     <!-- Share Card Generator -->
+    <script src="src/js/share-card-v3.js"></script>
     <script src="src/js/share-card-generator.js"></script>
     
     <!-- Firebase Modules -->
