feat: add creep/darkness system - The Black Update
Version: v1.2.0-alpha

Game Mechanic Changes:
- Blacklist violations no longer instant game over
- Creep system: 0-100 scale, game ends at 100
- 4 violations allowed (25 creep per violation)
- Progressive tension as darkness accumulates

UI Enhancements:
- Creep indicator in score bar (CREEP: X/100)
- Color-coded warnings (green → amber → red → pulsing)
- Violation warning box with creep change display
- Dynamic messages based on danger level

Haiku Responses:
- Creep increasing: 'Shadows grow deeper now...'
- Creep maxed: 'Darkness now consumes all...'

Technical Implementation:
- Added creepLevel, creepThreshold, creepPerViolation to gameState
- Modified handleBlacklistViolation for progressive penalty
- Updated trail items with creep metadata
- Added CSS for creep visual effects (~80 lines)
- Color-coded creep indicator with pulsing animation

Analytics:
- blacklist_violation_creep event (non-fatal)
- creep_threshold_reached event (game over)

Documentation:
- docs/CREEP_SYSTEM.md - Complete system guide

Files Modified: 6
Files Created: 2

Co-authored-by: Ona <no-reply@ona.com>

--- a/about.html
+++ b/about.html
@@ -303,7 +303,16 @@
 
         <div class="about-section">
             <h2>Version History</h2>
-            <p><strong>v1.1.0-alpha</strong> - Current Version (2025-10-28)</p>
+            <p><strong>v1.2.0-alpha</strong> - Current Version (2025-10-28) - The Black Update</p>
+            <ul>
+                <li><strong>Creep System:</strong> Progressive penalty for blacklist violations</li>
+                <li><strong>Gameplay:</strong> 4 violations allowed before game over (25 creep each)</li>
+                <li><strong>UI:</strong> Color-coded creep indicator (0-100 scale)</li>
+                <li><strong>Feedback:</strong> Dynamic haiku responses based on creep level</li>
+                <li><strong>Strategy:</strong> Manage risk vs reward with mounting tension</li>
+            </ul>
+            
+            <p><strong>v1.1.0-alpha</strong> - Security Update (2025-10-28)</p>
             <ul>
                 <li><strong>Security:</strong> XSS protection with DOMPurify</li>
                 <li><strong>Security:</strong> Prompt injection detection with PromptPurify</li>
