--- a/index.html
+++ b/index.html
@@ -316,6 +316,8 @@
                 <span>TOK: <strong id="totalTokens">0</strong></span>
                 <span>│</span>
                 <span>MAT: <strong id="matches">0/3</strong></span>
+                <span>│</span>
+                <span>CREEP: <strong id="creepLevel" class="creep-indicator">0</strong>/100</span>
             </div>
         </div>
 
