--- a/index.html
+++ b/index.html
@@ -530,6 +530,7 @@
     
     <!-- Share Card Generator -->
     <script src="src/js/share-card-v3.js"></script>
+    <script src="src/js/share-card-v4.js"></script>
     <script src="src/js/share-card-generator.js"></script>
     
     <!-- Header Toggle -->
