update about page
Co-authored-by: Ona <no-reply@ona.com>

--- a/about.html
+++ b/about.html
@@ -192,7 +192,6 @@
                 <li>Watch your token usage - aim for under 40 tokens per attempt</li>
                 <li>Learn from the response trail to refine your approach</li>
                 <li><strong>Manage creep:</strong> You can afford 3-4 blacklist violations, use them strategically</li>
-                <li><strong>Share cards:</strong> Show your progress with visual step-based creep progression</li>
             </ul>
         </div>
 
@@ -211,6 +210,7 @@
             <h3>User Features</h3>
             <ul>
                 <li>Anonymous play or sign in with Google</li>
+                <li><strong>Share cards:</strong>share a visual card with friends to showcase your results and step-by-step progression</li>
                 <li>User profiles with statistics and achievements</li>
                 <li>Session history and performance tracking</li>
                 <li>Daily, weekly, and all-time leaderboards</li>
